Rebrand APOD Grabber to StarHop and fix launchctl compatibility
- Rename project from APOD Grabber to StarHop
- Switch from web scraping to NASA API
- Add packaging infrastructure (build, sign, release scripts)
- Fix launchctl commands for macOS 15+ compatibility
- Update .gitignore to exclude old APOD app names

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,21 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Packaging artifacts
+*.zip
+*.dmg
+
+# Built products (unsigned source builds - safe to commit)
+# Signed/notarized versions should NEVER be committed
+/StarHop Install.app/
+/StarHop Uninstall.app/
+/APOD Install.app/
+/APOD Uninstall.app/
+
+# Code signing metadata inside any bundle
+**/_CodeSignature/
+**/CodeResources
+
+# macOS cruft
+.DS_Store
